@@ -15,14 +15,12 @@ gupnp_av_cp_SOURCES = av-cp.c \
 		      av-cp-renderercombo.c \
 		      media-renderer-proxy.c \
 		      media-server-proxy.c \
-		      av-resource-factory.c \
 		      av-cp.h \
 		      av-cp-gui.h \
 		      av-cp-playlisttreeview.h \
 		      av-cp-renderercombo.h \
 		      media-renderer-proxy.h \
-		      media-server-proxy.h \
-		      av-resource-factory.h
+		      media-server-proxy.h
 
 gupnp_av_cp_LDADD = $(LIBGLADE_LIBS) $(LIBGUPNP_LIBS) \
 		    ../common/libicons.a
